--- a/public/profile.html
+++ b/public/profile.html
@@ -12,13 +12,13 @@
 
 <body>
   <nav class="navbar navbar-dark fixed-top">
-    <a class="navbar-brand" href="#">The 100</a>
+    <a class="navbar-brand" href="#">Profile</a>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="data.html">Data</a></li>
-      <li><a href="profile.html">Profile</a></li>
-      <li><a href="settings.html">Settings</a></li>
-    </ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="data.html">Data</a></li>
+        <li><a href="profile.html">Profile</a></li>
+        <li><a href="settings.html">Settings</a></li>
+      </ul>
   </nav>
   <div id="mainPage" class="container page-container">
 
