--- a/public/profile.html
+++ b/public/profile.html
@@ -10,16 +10,18 @@
   <title>The 100</title>
 </head>
 
-<body>
-  <nav class="navbar navbar-dark fixed-top">
-    <a class="navbar-brand" href="#">Profile</a>
+<nav class="navbar navbar-dark fixed-top">
+    <a class="navbar-brand" href="#">The 100</a>
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="data.html">Data</a></li>
-        <li><a href="profile.html">Profile</a></li>
-        <li><a href="settings.html">Settings</a></li>
-      </ul>
+      <!--Links to the other pages of the application-->
+      <li><a href="index.html">Home</a></li>
+      <li><a href="data.html">Data</a></li>
+      <li><a href="profile.html">Profile</a></li>
+      <li><a href="settings.html">Settings</a></li>
+    </ul>
   </nav>
+
+<body>
   <div id="mainPage" class="container page-container">
 
 
