added separate home page, index.html is now log in page

--- a/public/home.html
+++ b/public/home.html
@@ -10,20 +10,22 @@
   <title>The 100</title>
 </head>
 
+
+<!--Do we need the navbar in the login page at all?-->
 <nav class="navbar navbar-dark fixed-top">
-    <a class="navbar-brand" href="#">The 100</a>
-    <ul>
-      <!--Links to the other pages of the application-->
-      <li><a href="home.html">Home</a></li>
-      <li><a href="data.html">Data</a></li>
-      <li><a href="profile.html">Profile</a></li>
-      <li><a href="settings.html">Settings</a></li>
-    </ul>
-  </nav>
-
-<body>
+  <a class="navbar-brand" href="#">The 100</a>
+  <ul>
+    <!--Links to the other pages of the application-->
+    <!--Should "index.html" be "home.html" for the "Home" page?-->
+    <li><a href="home.html">Home</a></li>
+    <li><a href="data.html">Data</a></li>
+    <li><a href="profile.html">Profile</a></li>
+    <li><a href="settings.html">Settings</a></li>
+  </ul>
+</nav>
+<!--id "indexBody" and class "bodyIntroAnimation" for CSS-->
+<body id="indexBody" class="bodyIntroAnimation">
   <div id="mainPage" class="container page-container">
-
 
   </div>
   <script src="scripts/jquery.min.js"></script>
