--- a/public/data.html
+++ b/public/data.html
@@ -14,7 +14,7 @@
   <nav class="navbar navbar-dark fixed-top">
     <a class="navbar-brand" href="#">Data</a>
     <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="home.html">Home</a></li>
         <li><a href="data.html">Data</a></li>
         <li><a href="profile.html">Profile</a></li>
         <li><a href="settings.html">Settings</a></li>
