--- a/public/settings.html
+++ b/public/settings.html
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-dark fixed-top">
   <a class="navbar-brand" href="#">Settings</a>
   <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="home.html">Home</a></li>
       <li><a href="data.html">Data</a></li>
       <li><a href="profile.html">Profile</a></li>
       <li><a href="settings.html">Settings</a></li>
