worked on login page, animation, buttons do not work

--- a/public/home.html
+++ b/public/home.html
@@ -24,8 +24,8 @@
   </ul>
 </nav>
 <!--id "indexBody" and class "bodyIntroAnimation" for CSS-->
-<body id="indexBody" class="bodyIntroAnimation">
-  <div id="mainPage" class="container page-container">
+<body id="homeBody">
+  <div id="homePage" class="container page-container">
 
   </div>
   <script src="scripts/jquery.min.js"></script>
