--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
   <link rel="stylesheet" href="styles/bootstrap-material-design.min.css">
+  <link rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/5.0.0/firebase-ui-auth.css" />
   <link rel="stylesheet" href="styles/main.css">
   <title>The 100</title>
 </head>
@@ -14,21 +15,28 @@
 <!--Do we need the navbar in the login page at all?-->
 <nav class="navbar navbar-dark fixed-top">
   <a class="navbar-brand" href="#">The 100</a>
-  <ul>
-    <!--Links to the other pages of the application-->
-    <!--Should "index.html" be "home.html" for the "Home" page?-->
+  <!-- <ul>
+    Links to the other pages of the application
+    Should "index.html" be "home.html" for the "Home" page?
     <li><a href="index.html">Home</a></li>
     <li><a href="data.html">Data</a></li>
     <li><a href="profile.html">Profile</a></li>
     <li><a href="settings.html">Settings</a></li>
-  </ul>
+  </ul> -->
 </nav>
 <!--id "indexBody" and class "bodyIntroAnimation" for CSS-->
-<body id="indexBody" class="bodyIntroAnimation">
+<!-- <body id="indexBody" class="bodyIntroAnimation"> -->
+  <body id="indexBody">
   <div id="mainPage" class="container page-container">
-    <div id="loginThe100" class="textIntroAnimation">The 100</div>
-
+    <!-- <div id="loginThe100" class="textIntroAnimation">The 100</div> -->
+    <div id="allLogIn">
+      <div id="loginThe100">The 100</div>
+      <div id="firebaseui-auth-container"></div>
+      <button id="rosefireButton" type="button" class="btn">Sign in with Rosefire</button>
+    </div>
   </div>
+
+
   <script src="scripts/jquery.min.js"></script>
   <script src="scripts/popper.js"></script>
   <script src="scripts/bootstrap-material-design.js"></script>
@@ -38,6 +46,8 @@
   <script src="/__/firebase/7.18.0/firebase-auth.js"></script>
   <script src="/__/firebase/7.18.0/firebase-firestore.js"></script>
   <script src="/__/firebase/init.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/5.0.0/firebase-ui-auth.js"></script>
+  <script src="scripts/rosefire.min.js"></script>
   <script src="scripts/main.js"></script>
 </body>
 
