added login and log out functionality

--- a/public/data.html
+++ b/public/data.html
@@ -20,7 +20,7 @@
         <li><a href="settings.html">Settings</a></li>
       </ul>
   </nav>
-  <div id="mainPage" class="container page-container">
+  <div id="dataPage" class="container page-container">
 
 
   </div>
