--- a/public/home.html
+++ b/public/home.html
@@ -27,6 +27,8 @@
 <body id="homeBody">
   <div id="homePage" class="container page-container">
 
+    <button id="signOutButton">Sign Out</button>
+
   </div>
   <script src="scripts/jquery.min.js"></script>
   <script src="scripts/popper.js"></script>
