--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 <!--id "indexBody" and class "bodyIntroAnimation" for CSS-->
 <!-- <body id="indexBody" class="bodyIntroAnimation"> -->
   <body id="indexBody">
-  <div id="mainPage" class="container page-container">
+  <div id="logInPage" class="container page-container">
     <!-- <div id="loginThe100" class="textIntroAnimation">The 100</div> -->
     <div id="allLogIn">
       <div id="loginThe100">The 100</div>
