--- a/public/profile.html
+++ b/public/profile.html
@@ -22,7 +22,7 @@
   </nav>
 
 <body>
-  <div id="mainPage" class="container page-container">
+  <div id="profilePage" class="container page-container">
 
 
   </div>
