--- a/public/settings.html
+++ b/public/settings.html
@@ -21,7 +21,7 @@
 </nav>
 
 <body>
-  <div id="mainPage" class="container page-container">
+  <div id="settingsPage" class="container page-container">
 
 
   </div>
