--- a/public/home.html
+++ b/public/home.html
@@ -29,26 +29,34 @@
     <div id="songAndTitle">
       <!-- <p id="songTitle">"Starboy" by The Weekend</p> -->
       <iframe id="player" type="text/html" width="640" height="390"
-        src="https://www.youtube.com/embed/34Na4j8AVgA?autoplay=1" frameborder="0"
+        src="" frameborder="0"
         enablejsapi="true"></iframe>
     </div>
     <div id="ratingForm">
-      <p id="songTitle">"Starboy" by The Weekend</p>
+      <p id="songTitle"></p>
       <form>
-        <div class="form-group">
-          <label id="rankingLabel" for="inputRanking">Ranking</label>
-          <input class="form-control" id="inputRanking" placeholder="">
-          <small id="rankingHelp" class="form-text">What ranking (out of 100) do you think this song is?</small>
+        <div class="form-group bmd-form-group">
+          <!-- <label for="inputRanking">Ranking</label> -->
+          <p id="rankingLabel">Ranking</p>
+          <input type="text" id="inputRanking">
+          <div id="rankingWarning"></div>
         </div>
         <div class="form-group">
-          <label id="ratingLabel" for="inputRating">Rating</label>
-          <input class="form-control" id="inputRating" placeholder="">
-          <small id="ratingHelp" class="form-text">What is your personal rating of the song?</small>
+          <p id="ratingLabel">Rating</p>
+          <span class="material-icons star" id="star1" data-selected="0">star</span>
+          <span class="material-icons star" id="star2" data-selected="0">star</span>
+          <span class="material-icons star" id="star3" data-selected="0">star</span>
+          <span class="material-icons star" id="star4" data-selected="0">star</span>
+          <span class="material-icons star" id="star5" data-selected="0">star</span>
+          <small id="rankingHelp" class="form-text">What is your personal rating of this song?</small>
         </div>
         <button id="submitSong" type="button" class="btn">Submit</button>
         <button id="newSong" type="button" class="btn">New Song</button>
       </form>
     </div>
+    <!-- Maybe put in modal to make it stand out more!!!! -->
+    <div id="guessTitle"></div>
+    <div id="guessResult"></div>
 
 
   </div>
@@ -63,6 +71,7 @@
   <script src="/__/firebase/7.18.0/firebase-auth.js"></script>
   <script src="/__/firebase/7.18.0/firebase-firestore.js"></script>
   <script src="/__/firebase/init.js"></script>
+  <script src="scripts/data.js"></script>
   <script src="scripts/main.js"></script>
 </body>
 
