--- a/public/data.html
+++ b/public/data.html
@@ -10,19 +10,25 @@
   <title>The 100</title>
 </head>
 
-<body>
+<body id="dataBody">
   <nav class="navbar navbar-dark fixed-top">
-    <a class="navbar-brand" href="#">Data</a>
+    <a class="navbar-brand" href="home.html">The 100</a>
     <ul>
         <li><a href="home.html">Home</a></li>
         <li><a href="data.html">Data</a></li>
         <li><a href="profile.html">Profile</a></li>
         <li><a href="settings.html">Settings</a></li>
+        <li id="signOutButton">Sign Out</a></li>
       </ul>
   </nav>
   <div id="dataPage" class="container page-container">
-
-
+    <div id="dataSettings">
+      <ul>
+        <li class="currentData" id="userData">User Data</li>
+        <li class="" id="globalData">Global Data</li>
+      </ul>
+    </div>
+    <div id="songListContainer">Loading...</div>
   </div>
   <script src="scripts/jquery.min.js"></script>
   <script src="scripts/popper.js"></script>
@@ -33,6 +39,7 @@
   <script src="/__/firebase/7.18.0/firebase-auth.js"></script>
   <script src="/__/firebase/7.18.0/firebase-firestore.js"></script>
   <script src="/__/firebase/init.js"></script>
+  <script src="scripts/data.js"></script>
   <script src="scripts/main.js"></script>
 </body>
 
