--- a/public/globalsong.html
+++ b/public/globalsong.html
@@ -7,26 +7,24 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
   <link rel="stylesheet" href="styles/bootstrap-material-design.min.css">
   <link rel="stylesheet" href="styles/main.css">
-  <title>Song Data</title>
+  <title>Global Song Data</title>
 </head>
 
-<body id="songBody">
+<body id="globalSongBody">
   <nav class="navbar navbar-dark fixed-top">
-    <a class="navbar-brand" href="data.html">Song Data</a>
+    <a class="navbar-brand" href="data.html">Global Song Data</a>
 
     <div class="dropdown pull-xs-right">
       <button class="btn bmd-btn-icon dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <i class="material-icons">more_vert</i>
       </button>
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-        <button id="menuEdit" class="dropdown-item" type="button" data-toggle="modal" data-target="#editSongDialog"><i class="material-icons">edit</i>&nbsp;&nbsp;&nbsp;Edit</button>
-        <button id="menuDelete" class="dropdown-item" type="button" data-toggle="modal" data-target="#deleteSongDialog"><i class="material-icons">delete</i>&nbsp;&nbsp;&nbsp;Delete</button>
-        <!-- <button id="menuSignOut" class="dropdown-item" type="button" data-target="#deleteQuoteDialog"><i class="material-icons">login</i>&nbsp;&nbsp;&nbsp;SignOut</button> -->
+        <button id="menuAdd" class="dropdown-item" type="button" data-toggle="modal" data-target="#addSongDialog"><i class="material-icons">edit</i>&nbsp;&nbsp;&nbsp;Add to My Songs</button>
       </div>
     </div>
 
   </nav>
-  <div id="songPage" class="container page-container">
+  <div id="globalSongPage" class="container page-container">
     <div class="card">
       <div class="card-body">
         <iframe id="player" type="text/html" width="640" height="390"
@@ -39,11 +37,11 @@
   </div>
 
 <!-- Modal -->
-<div class="modal fade" id="editSongDialog" tabindex="-1" role="dialog" aria-labelledby="Edit Song Dialog" aria-hidden="true">
+<div class="modal fade" id="addSongDialog" tabindex="-1" role="dialog" aria-labelledby="Add Song Dialog" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Edit This Song Data</h5>
+        <h5 class="modal-title">Add This Song Data</h5>
       </div>
       <div class="modal-body">
         
@@ -55,7 +53,6 @@
           </div>
           <div class="form-group bmd-form-group">
             <label for="inputRating">Rating</label>
-            <br>
             <span class="material-icons star" id="star1" data-selected="0">star</span>
             <span class="material-icons star" id="star2" data-selected="0">star</span>
             <span class="material-icons star" id="star3" data-selected="0">star</span>
@@ -67,22 +64,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">CANCEL</button>
-        <button id="submitEditSong" type="button" class="btn btn-primary" data-dismiss="modal">UPDATE</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="modal fade" id="deleteSongDialog" tabindex="-1" role="dialog" aria-labelledby="Delete Song Dialog" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Delete This Song Data</h5>
-      </div>
-      <div class="modal-body">Are you sure you want to delete this song from your data?</div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">CANCEL</button>
-        <button id="submitDeleteSong" type="button" class="btn btn-primary" data-dismiss="modal">DELETE</button>
+        <button id="submitAddSong" type="button" class="btn btn-primary" data-dismiss="modal">ADD</button>
       </div>
     </div>
   </div>
@@ -97,6 +79,7 @@
   <script src="/__/firebase/7.18.0/firebase-firestore.js"></script>
   <script src="/__/firebase/7.18.0/firebase-auth.js"></script>
   <script src="/__/firebase/init.js"></script>
+  <script src="scripts/data.js"></script>
   <script src="scripts/main.js"></script>
 </body>
 
