data search bar modal and partial functionality

--- a/public/data.html
+++ b/public/data.html
@@ -27,6 +27,17 @@
         <li class="currentData" id="userData">User Data</li>
         <li class="" id="globalData">Global Data</li>
       </ul>
+      <!--Search Box-->
+      <div id="dataSearchBoxContainer" class="input-group">
+        <div id="dataSearchBox" class="form-outline">
+          <input id="searchInput" type="search" id="form1" class="form-control"></input>
+          <label id="search-label" class="form-label" for="form1">Search</label>
+        </div>
+        <button id="searchButton" type="button" class="btn btn-primary">
+          <i id="dataSearchIcon" class="fas fa-search"></i>
+        </button>
+      </div>
+
     </div>
     <div id="songListContainer">Loading...</div>
   </div>
