can read data from user collection, new song button randomize song not rated by user

--- a/public/data.html
+++ b/public/data.html
@@ -17,7 +17,6 @@
         <li><a href="home.html">Home</a></li>
         <li><a href="data.html">Data</a></li>
         <li><a href="profile.html">Profile</a></li>
-        <li><a href="settings.html">Settings</a></li>
         <li id="signOutButton">Sign Out</a></li>
       </ul>
   </nav>
@@ -30,7 +29,7 @@
       <!--Search Box-->
       <div id="dataSearchBoxContainer" class="input-group">
         <div id="dataSearchBox" class="form-outline">
-          <input id="searchInput" type="search" id="form1" class="form-control"></input>
+          <input id="searchInput" type="search" id="searchBar" class="form-control"></input>
           <label id="search-label" class="form-label" for="form1">Search</label>
         </div>
         <button id="searchButton" type="button" class="btn btn-primary">
