--- a/public/globalsong.html
+++ b/public/globalsong.html
@@ -32,6 +32,7 @@
         enablejsapi="true"></iframe>
         <h6 id="cardTitle" class="card-subtitle mb-2">Loading...</h6>
         <p id="cardData"></p>
+        <div id="dataWarning"></div>
       </div>
     </div>
   </div>
