--- a/public/profile.html
+++ b/public/profile.html
@@ -11,7 +11,7 @@
 </head>
 
 <nav class="navbar navbar-dark fixed-top">
-    <a class="navbar-brand" href="#">The 100</a>
+    <a class="navbar-brand" href="home.html">The 100</a>
     <ul>
       <!--Links to the other pages of the application-->
       <li><a href="home.html">Home</a></li>
@@ -58,10 +58,6 @@
             <div class="form-group bmd-form-group">
               <label for="inputName">Name</label>
               <input type="text" class="form-control" id="inputName" placeholder="">
-            </div>
-            <div class="form-group bmd-form-group">
-              <label for="inputImage">Image</label>
-              <input type="text" class="form-control" id="inputImage" placeholder="">
             </div>
             <small class="form-text">You must refresh page to see changes!</small>
           </form>
