add a way for user to just see their data

--- a/public/data.html
+++ b/public/data.html
@@ -23,18 +23,17 @@
   <div id="dataPage" class="container page-container">
     <div id="dataSettings">
       <ul>
-        <li class="currentData" id="userData">User Data</li>
+        <li class="" id="userData">All User Data</li>
+        <li class="" id="myData">My Data</li>
         <li class="" id="globalData">Global Data</li>
       </ul>
       <!--Search Box--> 
       <div id="dataSearchBoxContainer" class="input-group">
         <div id="dataSearchBox" class="form-outline">
           <input id="searchInput" type="search" id="searchBar" class="form-control"></input>
-          <label id="search-label" class="form-label" for="form1">Search</label>
+          <label id="search-label" class="form-label" for="form1"></label>
         </div>
-        <button id="searchButton" type="button" class="btn btn-primary">
-          <i id="dataSearchIcon" class="fas fa-search"></i>
-        </button>
+        <button id="searchButton" type="button" class="btn">Search</button>
       </div>
 
     </div>
