--- a/public/profile.html
+++ b/public/profile.html
@@ -36,7 +36,7 @@
         </div>
         <div id="userText">
           <p id="userInformation"></p>
-          <button id="editUserButon" class="btn" type="button" data-toggle="modal"data-target="#editUserDialog">Edit User Information</button>
+          <!-- <button id="editUserButon" class="btn" type="button" data-toggle="modal"data-target="#editUserDialog">Edit User Information</button> -->
         </div>
       </div>
     </div>
@@ -50,7 +50,7 @@
 
   </div>
 
-  <div class="modal fade" id="editUserDialog" tabindex="-1" role="dialog" aria-labelledby="Edit User" aria-hidden="true">
+  <!-- <div class="modal fade" id="editUserDialog" tabindex="-1" role="dialog" aria-labelledby="Edit User" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -72,7 +72,7 @@
           <button id="submitEditUser" type="button" class="btn btn-primary" data-dismiss="modal">UPDATE</button>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
   <script src="scripts/jquery.min.js"></script>
   <script src="scripts/popper.js"></script>
